--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,6 +277,13 @@ text-align: center;
         padding: 0;
     }
 
+    #times > div {
+        width: 100%;
+        clear:both;
+        height: 150px;
+        padding: 0;
+    }
+
     hr {
         display: none;
     }
